minor bugs on mobile devices fixed
* menu bar toggler while scrolling
* Facebook Likes position
* site logo

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -142,8 +142,8 @@ br.md
     margin: .75em 0 0 1em
     overflow: hidden
     // box
-    height: 80px
-    width: 300px
+    height: 65px
+    width: 310px
     // style
     border: none
 
