--- a/sass/layout/_nav.sass
+++ b/sass/layout/_nav.sass
@@ -146,6 +146,11 @@ nav.layout
             // style
             background-color: #c62a22
 
+        .site-logo
+            // posi
+            margin-left: auto
+            margin-right: auto
+
         ul
             // posi
             margin: .7em auto
