--- a/sass/layout/slide/_1.sass
+++ b/sass/layout/slide/_1.sass
@@ -176,9 +176,9 @@
 
 		.fb-like-iframe 
 			// posi
+			margin: 10em 0 0 -155px
 			position: absolute
-			right: 0
-			top: 14.2em
+			left: 50%
 
 @media only screen and (max-width: 639px)
 	#slide1
@@ -187,8 +187,7 @@
 
 		.fb-like-iframe 
 			// posi
-			margin-left: -150px
-			left: 50%
+			margin-top: 5px
 			right: auto
 		#nuke-buster
 			// posi
@@ -211,6 +210,9 @@
 				text-indent: 0
 			.nuclear
 				display: block
+			h1
+				// posi
+				margin-top: 20px
 			h1 + h2
 				// posi
 				margin-top: 1em
